projects/elements/src/alert/alert-banner.css
:host {
  --border-radius: 0;
  --background: var(--nve-sys-support-color);
  --color: var(--nve-sys-text-white-color);
  --icon-color: var(--color);
}

:host([status='accent']) {
  --background: var(--nve-sys-support-accent-color);
  --icon-color: var(--color);
}

:host([status='success']) {
  --background: var(--nve-sys-support-success-color);
  --icon-color: var(--color);
}

:host([status='warning']) {
  --background: var(--nve-sys-support-warning-color);
  --icon-color: var(--color);
  --color: var(--nve-sys-text-black-color);
}

:host([status='danger']) {
  --background: var(--nve-sys-support-danger-color);
  --icon-color: var(--color);
}

